--- a/MVVM_TreeView/MVVM_TreeView.csproj
+++ b/MVVM_TreeView/MVVM_TreeView.csproj
@@ -61,11 +61,22 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
+    <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    </Page>
+    <Compile Include="Core\UiService.cs" />
+    <Compile Include="Core\View\CommandReference.cs" />
+    <Compile Include="Core\View\CustomTreeView.cs" />
+    <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\SplashScreenViewModel.cs" />
+    <Compile Include="View\SplashWindow.xaml.cs">
+      <DependentUpon>SplashWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WPFConverters\InvertableBooleanToVisibilityConverter.cs" />
+    <Compile Include="WPFConverters\InvertedBooleanConverter.cs" />
+    <Compile Include="WPFConverters\RadioBoolConverter.cs" />
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -76,10 +87,14 @@
     <Compile Include="Core\CloseableViewModel.cs" />
     <Compile Include="Core\ToolBarItemViewModel.cs" />
     <Compile Include="Core\ViewModelBase.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\SplashWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Items.cs" />
@@ -106,14 +121,22 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="Resources\Images\splashscreen.psd" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\Images\Icons\" />
-    <Folder Include="ViewModel\" />
-    <Folder Include="View\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="E:\VStudio12Workspace\FundDataBase\Splasher\Splasher.csproj">
+      <Project>{855c1e83-a0b1-4957-bf0f-6ab3d94e915c}</Project>
+      <Name>Splasher</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\splashscreen.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
