--- a/MVVM_TreeView/MVVM_TreeView.csproj
+++ b/MVVM_TreeView/MVVM_TreeView.csproj
@@ -132,6 +132,12 @@
   <ItemGroup>
     <Resource Include="Resources\Images\splashscreen.png" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Splasher\Splasher.csproj">
+      <Project>{855c1e83-a0b1-4957-bf0f-6ab3d94e915c}</Project>
+      <Name>Splasher</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
